DATE        AUTHOR    CHANGE
----------- --------- ---------------------------------------------------------
Jan-08-2002 cjust     Testing equality of two "invalid" VarValues now
                      returns true.
                      Added a VarValue::isValid() convenience method.
Dec-29-2001 cjust     VjControl doesn't open multiple unsynchronized
                      copies of the same file anymore, and asks if the
                      user wants to revert to the saved copy.
Nov-30-2001 cjust     ConfigIO's API now uses const ints to explicitly
                      give the file format for reading/writing.  Most
        	      callers of these APIs just use the default argument
                      for that parameter anyway, so the effect on user 
                      code is small.
Oct-23-2001 cjust     Made JackalServer a singleton, allow JackalControls
	              to access its list of connections (e.g. for 
	              broadcasting messages).
Oct-21-2001 cjust     Fixed registration of JackalControls.
Oct-12-2001 cjust     Updated to Allen's improved vprDebug registration
	              code.
Oct-09-2001 cjust     Optimized VjConfig.ValType to reduce number of 
	              objects instatiated by configuration code.
Oct-05-2001 cjust     Replaced several explicit "parent" notifications in
	              VjControl with ActionEvent interfaces.  Cleaned up
		      message handling between the Performance module and
		      its related GUI components.
Sep-25-2001 cjust     Added various sample VjControl extensions.
Sep-20-2001 cjust     Refactored ConfigurationControl to provide a default
	              dynamic reconfiguration capability.  This should be
	              sufficient for most applications which wish to use
	              Jackal-based dynamic reconfiguration.
Sep-10-2001 cjust     Restructuring of Jackal source code & build system.
Aug-31-2001 cjust     Created the new "Jackal" module.
	